tests/sksl/errors/golden/GrMainTooManyParameters.cpp
### Compilation failed:

error: 1: .fp 'main' must be declared main() or main(float2)
1 error
